[package]
name = "dalamud-plugin-stats"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
handlebars = "4.1.3"
lazy_static = "1.4"
regex = "1.5"
clap = { git = "https://github.com/clap-rs/clap" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"